--- a/index.html
+++ b/index.html
@@ -51,7 +51,28 @@
                             <input type="text" placeholder="1/10/2010" id="datetime"/>
                         </li>
                         <li class="list-group-item bg-dark">
-                            <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                            <label for="city">Enter a City</label>
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <input type="text" placeholder="roswell" id="city"/>
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="state">Enter a State</label>
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <input type="text" placeholder="ca" id="state"/>
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="country">Enter a Country</label>
+                        </li>
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <input type="text" placeholder="us" id="country"/>
+                        </li>
+                        <li class="list-group-item bg-dark">
+                            <label for="shape">Enter a Shape</label>
+                        <li class="list-group-item bg-dark">
+                            <input type="text" placeholder="circle" id="shape"/>
                         </li>
                     </ul>
                 </form>
